fix image load in css

--- a/pendu/assets/css/style.css
+++ b/pendu/assets/css/style.css
@@ -2,7 +2,7 @@ section {
   border: 1px solid black; }
 
 body {
-  background-image: url("https://www.welt.de/img/reise/mobile100867994/1722503347-ci102l-w1024/donald-tresor-DW-Reise-Entenhausen-jpg.jpg");
+  background-image: url("../images/geldspeicher.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-color: lightblue; }
