add second image in css folder

--- a/pendu/assets/css/style.css
+++ b/pendu/assets/css/style.css
@@ -11,7 +11,7 @@ body {
     display:none;
 }*/
 .panzer {
-  background-image: url("http://3.bp.blogspot.com/-OmAz_N0XgeQ/UDgbrMSlD_I/AAAAAAAACgs/Bh2MJGWVATw/s1600/BeaglesWalk.jpg");
+  background-image: url("../images/BeaglesWalk.jpg");
   background-repeat: no-repeat;
   background-size: cover; }
 
