--- a/pendu/assets/css/style.scss
+++ b/pendu/assets/css/style.scss
@@ -13,7 +13,7 @@ body{
 }*/
 
 .panzer{
-    background-image:url("http://3.bp.blogspot.com/-OmAz_N0XgeQ/UDgbrMSlD_I/AAAAAAAACgs/Bh2MJGWVATw/s1600/BeaglesWalk.jpg");
+    background-image:url("../images/BeaglesWalk.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
