--- a/pendu/assets/css/style.css
+++ b/pendu/assets/css/style.css
@@ -2,9 +2,6 @@ section {
   border: 1px solid black; }
 
 body {
-  background-image: url("../images/geldspeicher.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
   background-color: lightblue; }
 
 /*#inputArea{
@@ -14,5 +11,18 @@ body {
   background-image: url("../images/BeaglesWalk.jpg");
   background-repeat: no-repeat;
   background-size: cover; }
+
+section {
+  outline: 1px solid red; }
+
+h1 {
+  text-align: center; }
+
+#start {
+  width: 50%;
+  margin: auto;
+  outline: 1px solid green;
+  position: relative;
+  left: 25vw; }
 
 /*# sourceMappingURL=style.css.map */
