add responsive elements

--- a/pendu/assets/css/style.css
+++ b/pendu/assets/css/style.css
@@ -8975,6 +8975,7 @@ label.panel-block:hover {
 }
 section {
   border: 1px solid black;
+  font-size: 20px;
 }
 
 h1 {
@@ -9003,6 +9004,11 @@ h1 {
   color: #FF3D16;
   text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black, -10px 10px 0 #FFC609;
 }
+@media screen and (max-width: 765px) {
+  #mainTitle {
+    font-size: 3rem;
+  }
+}
 
 input {
   margin-right: 1rem;
@@ -9023,9 +9029,14 @@ body {
 
 #scenario {
   text-align: justify;
-  width: 30%;
+  width: 35%;
   margin-left: 15px;
   margin-right: 15px;
+}
+@media screen and (max-width: 765px) {
+  #scenario {
+    width: 100%;
+  }
 }
 
 #raptout {
